# OrbisFX-Launcher

./: .gitignore  RELEASE_NOTES.md  build.bat  generate-icons.ps1  index.html  package-lock.json  package.json  release.bat  supabase-schema.sql  tailwind.config.cjs  update-icons.bat  update-version.ps1  vite.config.ts
GSHADE INSTALL/: GShade.ini
GSHADE INSTALL/gshade-presets/Custom/: vanilla-plus.ini
GSHADE INSTALL/gshaders/Shaders/: 3DFX.fx  ArcaneBloom.fx  BilateralComic.fx  Bumpmapping.fx  CAS.fx  CMAA_2.fx  Cartoon.fx  Copyright.fx  CopyrightTex_PSO2.fxh  CopyrightTex_XIV.fxh  DeepFry.fx  Dehaze.fx  ExtendedLevels.fx  EyeAdaption.fx  Halftone.fx  HexLensFlare.fx  LiftGammaGain.fx  MagicBloom.fx  MultiStageDepth.fx  NGLighting-Shader.fxh  NGLightingUI.fxh  PPFX_Bloom.fx  RTAO.fx  StageDepth.fx  ZN_LC.fx  _README_DO_NOT_ADD_EDIT_OR_REPLACE_FILES_HERE_.txt  qUINT_mxao.fx
GSHADE INSTALL/gshaders/Shaders/Complete/: COMPLETE_RT.fx  CompleteFX_Common.fxh  CompleteRT_Configs.fxh  CompleteRT_Main.fxh  CompleteRT_RayMarch.fxh
GSHADE INSTALL/gshaders/Shaders/Include/: CoarseFlow.fxh
RESHADE INSTALL/: ReShade.ini
RESHADE INSTALL/reshade-shaders/Addons/: ReGradeAddon.addon32  ReGradeAddon.addon64  lut_manager.addon32  lut_manager.addon64
RESHADE INSTALL/reshade-shaders/Shaders/Complete/: CompleteRT_Denoise.fxh  CompleteRT_UI.fxh
RESHADE INSTALL/reshade-shaders/Shaders/ZenteonFX/: ZX_CameraSettings.fxh  Zenteon_RadonBloom.fx
docs/: PRESET_SUBMISSION_DESIGN.md
src/: App.css  App.tsx  index.css
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: community.rs  discord_auth.rs  image_compress.rs  lib.rs  models.rs  supabase.rs  utils.rs
src-tauri/src/commands/: community.rs  game.rs  hotkeys.rs  mod.rs  moderation.rs  presets.rs  ratings.rs  screenshots.rs  settings.rs  updates.rs
src/components/: CachedImage.tsx  ErrorBoundary.tsx  ImageComparisonSlider.tsx  ModerationPanel.tsx  MyUploads.tsx  Skeleton.tsx  StarRating.tsx  SubmissionWizard.tsx  Toast.tsx  UserProfile.tsx
supabase/.temp/: pooler-url  project-ref
supabase/functions/discord-oauth/: index.ts
supabase/migrations/: 001_community_presets.sql  002_moderation.sql  003_user_profiles.sql  004_security_hardening.sql  005_user_profile_creation.sql  006_update_preset_versioning.sql  007_security_fixes.sql
visually/: Hytale.html  Profiles _ Hytale.html
visually/Hytale_files/: css2  main.1.6157aae3e45bd567bd17.js.download  runtime.808475b8a600aff3aa6d.js.download  vendor.3.31e2b40db6541630fe85.js.download
visually/Profiles _ Hytale_files/: feedback.B-uu2YbW.css  page.CbaEUeYw.js.download
