[package]
name = "orbisfx-launcher"
version = "2.0.0"
description = "OrbisFX Launcher - GShade preset manager and game launcher for Hytale"
authors = ["OrbisFX Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
include_dir = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
once_cell = "1.19"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
sha2 = "0.10"
base64 = "0.22"
windows = { version = "0.61.3", features = ["Win32_Security_Cryptography", "Win32_System_Memory"] }
rand = "0.9.2"
regex = "1.12.2"

# ============== Build Profiles ==============
# Development profile - optimize for fast compile times
[profile.dev]
incremental = true        # Enable incremental compilation
opt-level = 0             # No optimizations (fastest compile)
debug = true              # Full debug info
split-debuginfo = "unpacked"  # Faster debug builds on Windows
lto = false               # No LTO (faster linking)
codegen-units = 256       # Max parallelism for compilation

# Development dependencies get some optimization to reduce runtime lag
[profile.dev.package."*"]
opt-level = 1             # Slight optimization for dependencies

# Release profile - optimize for runtime performance
[profile.release]
incremental = false       # Full recompilation for consistent builds
opt-level = 3             # Maximum optimization
lto = "thin"              # Thin LTO for good optimization with reasonable link time
codegen-units = 1         # Single codegen unit for better optimization
strip = true              # Strip symbols to reduce binary size
panic = "abort"           # Abort on panic (smaller binary)

# Custom dev-optimized profile (use with: cargo build --profile dev-opt)
[profile.dev-opt]
inherits = "dev"
opt-level = 1             # Light optimization
lto = false
debug = true
